@@ -1019,6 +1019,42 @@ operator|.
 name|getException
 argument_list|()
 expr_stmt|;
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|headers
+init|=
+name|rsp
+operator|.
+name|getResponseHeader
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|headers
+operator|!=
+literal|null
+condition|)
+block|{
+name|headers
+operator|.
+name|add
+argument_list|(
+literal|"zkConnected"
+argument_list|,
+name|pingrsp
+operator|.
+name|getResponseHeader
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|"zkConnected"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 catch|catch
 parameter_list|(
