@@ -139,6 +139,19 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|cloud
+operator|.
+name|ZkController
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|SolrDocumentList
@@ -243,6 +256,19 @@ operator|.
 name|core
 operator|.
 name|CloseHook
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|core
+operator|.
+name|CoreContainer
 import|;
 end_import
 begin_import
@@ -1274,6 +1300,28 @@ name|shardHandler
 init|=
 literal|null
 decl_stmt|;
+name|CoreContainer
+name|cc
+init|=
+name|req
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getCoreDescriptor
+argument_list|()
+operator|.
+name|getCoreContainer
+argument_list|()
+decl_stmt|;
+name|boolean
+name|isZkAware
+init|=
+name|cc
+operator|.
+name|isZooKeeperAware
+argument_list|()
+decl_stmt|;
 name|rb
 operator|.
 name|isDistrib
@@ -1287,19 +1335,7 @@ name|getBool
 argument_list|(
 literal|"distrib"
 argument_list|,
-name|req
-operator|.
-name|getCore
-argument_list|()
-operator|.
-name|getCoreDescriptor
-argument_list|()
-operator|.
-name|getCoreContainer
-argument_list|()
-operator|.
-name|isZooKeeperAware
-argument_list|()
+name|isZkAware
 argument_list|)
 expr_stmt|;
 if|if
@@ -1386,6 +1422,66 @@ operator|=
 literal|null
 expr_stmt|;
 comment|// request is not distributed after all and so the shard handler is not needed
+block|}
+block|}
+if|if
+condition|(
+name|isZkAware
+condition|)
+block|{
+name|ZkController
+name|zkController
+init|=
+name|cc
+operator|.
+name|getZkController
+argument_list|()
+decl_stmt|;
+name|NamedList
+argument_list|<
+name|Object
+argument_list|>
+name|headers
+init|=
+name|rb
+operator|.
+name|rsp
+operator|.
+name|getResponseHeader
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|headers
+operator|!=
+literal|null
+condition|)
+block|{
+name|headers
+operator|.
+name|add
+argument_list|(
+literal|"zkConnected"
+argument_list|,
+name|zkController
+operator|!=
+literal|null
+condition|?
+operator|!
+name|zkController
+operator|.
+name|getZkClient
+argument_list|()
+operator|.
+name|getConnectionManager
+argument_list|()
+operator|.
+name|isLikelyExpired
+argument_list|()
+else|:
+literal|false
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 return|return
