@@ -1097,6 +1097,21 @@ name|getStatus
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|assertTrue
+argument_list|(
+name|rsp
+operator|.
+name|getResponseHeader
+argument_list|()
+operator|.
+name|getBooleanArg
+argument_list|(
+operator|(
+literal|"zkConnected"
+operator|)
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|SolrPing
 name|reqNonDistrib
 init|=
@@ -1123,6 +1138,21 @@ name|rsp
 operator|.
 name|getStatus
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|rsp
+operator|.
+name|getResponseHeader
+argument_list|()
+operator|.
+name|getBooleanArg
+argument_list|(
+operator|(
+literal|"zkConnected"
+operator|)
+argument_list|)
 argument_list|)
 expr_stmt|;
 comment|// delete the collection we created earlier
