@@ -20,6 +20,15 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|File
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|ArrayList
@@ -53,6 +62,136 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|SolrResponse
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|embedded
+operator|.
+name|JettySolrRunner
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|impl
+operator|.
+name|CloudSolrClient
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
+name|QueryRequest
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
+name|SolrPing
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
+name|QueryResponse
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|response
+operator|.
+name|SolrPingResponse
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|cloud
+operator|.
+name|MiniSolrCloudCluster
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|common
 operator|.
 name|util
@@ -71,6 +210,19 @@ operator|.
 name|core
 operator|.
 name|SolrCore
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|response
+operator|.
+name|SolrQueryResponse
 import|;
 end_import
 begin_import
@@ -570,6 +722,199 @@ literal|1
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testZkConnected
+specifier|public
+name|void
+name|testZkConnected
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|MiniSolrCloudCluster
+name|miniCluster
+init|=
+operator|new
+name|MiniSolrCloudCluster
+argument_list|(
+literal|5
+argument_list|,
+name|createTempDir
+argument_list|()
+argument_list|,
+name|buildJettyConfig
+argument_list|(
+literal|"/solr"
+argument_list|)
+argument_list|)
+decl_stmt|;
+specifier|final
+name|CloudSolrClient
+name|cloudSolrClient
+init|=
+name|miniCluster
+operator|.
+name|getSolrClient
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+name|assertNotNull
+argument_list|(
+name|miniCluster
+operator|.
+name|getZkServer
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|List
+argument_list|<
+name|JettySolrRunner
+argument_list|>
+name|jettys
+init|=
+name|miniCluster
+operator|.
+name|getJettySolrRunners
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|5
+argument_list|,
+name|jettys
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|JettySolrRunner
+name|jetty
+range|:
+name|jettys
+control|)
+block|{
+name|assertTrue
+argument_list|(
+name|jetty
+operator|.
+name|isRunning
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|// create collection
+name|String
+name|collectionName
+init|=
+literal|"testSolrCloudCollection"
+decl_stmt|;
+name|String
+name|configName
+init|=
+literal|"solrCloudCollectionConfig"
+decl_stmt|;
+name|File
+name|configDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|SolrTestCaseJ4
+operator|.
+name|TEST_HOME
+argument_list|()
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+literal|"collection1"
+operator|+
+name|File
+operator|.
+name|separator
+operator|+
+literal|"conf"
+argument_list|)
+decl_stmt|;
+name|miniCluster
+operator|.
+name|uploadConfigDir
+argument_list|(
+name|configDir
+argument_list|,
+name|configName
+argument_list|)
+expr_stmt|;
+name|miniCluster
+operator|.
+name|createCollection
+argument_list|(
+name|collectionName
+argument_list|,
+literal|2
+argument_list|,
+literal|2
+argument_list|,
+name|configName
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+name|QueryRequest
+name|req
+init|=
+operator|new
+name|QueryRequest
+argument_list|()
+decl_stmt|;
+name|QueryResponse
+name|rsp
+init|=
+name|req
+operator|.
+name|process
+argument_list|(
+name|cloudSolrClient
+argument_list|,
+name|collectionName
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|rsp
+operator|.
+name|getResponseHeader
+argument_list|()
+operator|.
+name|getBooleanArg
+argument_list|(
+literal|"zkConnected"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// delete the collection we created earlier
+name|miniCluster
+operator|.
+name|deleteCollection
+argument_list|(
+name|collectionName
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|miniCluster
+operator|.
+name|shutdown
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 block|}
 end_class
